plugins {
    id 'java-library'
}

version = '1.0'
group = 'com.bmuschko'
sourceCompatibility = JavaVersion.VERSION_12
targetCompatibility = JavaVersion.VERSION_12

repositories {
    mavenCentral()
}

dependencies {
    def junitJupiterVersion = '5.4.1'
    testImplementation "org.junit.jupiter:junit-jupiter-api:$junitJupiterVersion"
    testImplementation "org.junit.jupiter:junit-jupiter-params:$junitJupiterVersion"
    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitJupiterVersion"
}

tasks.withType(JavaCompile) {
    options.compilerArgs << '--enable-preview'
}

tasks.withType(Test) {
    useJUnitPlatform()
    jvmArgs '--enable-preview'
}